--- a/Final_project-Sea_level.ipynb
+++ b/Final_project-Sea_level.ipynb
@@ -713,7 +713,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 13,
    "id": "697be605-7200-428b-a265-33e42819d778",
    "metadata": {},
    "outputs": [
@@ -792,12 +792,12 @@
    ],
    "source": [
     "# Run spearman correlations analysis\n",
-    "!python spearmans.py"
+    "!python correlation/spearmans.py"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 11,
    "id": "4f5d7b06-ae10-4cb9-ac5d-8dc16aebfb20",
    "metadata": {},
    "outputs": [
@@ -831,7 +831,7 @@
       "4     80\n",
       "11    80\n",
       "Name: month, dtype: int64\n",
-      "sealevel-reg3.py:102: SettingWithCopyWarning: \n",
+      "models/sealevel-reg3.py:102: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
@@ -870,7 +870,7 @@
       "Model:                            OLS   Adj. R-squared:                  0.957\n",
       "Method:                 Least Squares   F-statistic:                     3674.\n",
       "Date:                Sun, 15 Sep 2024   Prob (F-statistic):               0.00\n",
-      "Time:                        20:56:21   Log-Likelihood:                -2649.1\n",
+      "Time:                        21:04:49   Log-Likelihood:                -2649.1\n",
       "No. Observations:                 995   AIC:                             5312.\n",
       "Df Residuals:                     988   BIC:                             5346.\n",
       "Df Model:                           6                                         \n",
@@ -923,7 +923,7 @@
       "moon_phase_sin    0\n",
       "moon_phase_cos    0\n",
       "dtype: int64\n",
-      "sealevel-reg3.py:171: SettingWithCopyWarning: \n",
+      "models/sealevel-reg3.py:171: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -934,9 +934,9 @@
       "OLS Model - R²: 0.8945947719848347\n",
       "Figure(1000x600)\n",
       "Traceback (most recent call last):\n",
-      "  File \"sealevel-reg3.py\", line 215, in <module>\n",
+      "  File \"models/sealevel-reg3.py\", line 215, in <module>\n",
       "    create_and_evaluate_model(remove_columns=['month'])\n",
-      "  File \"sealevel-reg3.py\", line 202, in create_and_evaluate_model\n",
+      "  File \"models/sealevel-reg3.py\", line 202, in create_and_evaluate_model\n",
       "    future_predictions = ols_model.predict(X_encoded_future)\n",
       "  File \"/Users/alon.hod/opt/anaconda3/lib/python3.7/site-packages/statsmodels/base/model.py\", line 1160, in predict\n",
       "    **kwargs)\n",
@@ -949,12 +949,12 @@
    ],
    "source": [
     "# Run year 2100 sealevel predictions with regression model\n",
-    "!python sealevel-reg3.py"
+    "!python models/sealevel-reg3.py"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "id": "3062fa52-4691-4f04-a2d4-99e05dfd22b2",
    "metadata": {},
    "outputs": [
@@ -988,7 +988,7 @@
       "4     80\n",
       "11    80\n",
       "Name: month, dtype: int64\n",
-      "sealevel-reg3.py:102: SettingWithCopyWarning: \n",
+      "models/sealevel-reg3.py:102: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
@@ -1027,7 +1027,7 @@
       "Model:                            OLS   Adj. R-squared:                  0.957\n",
       "Method:                 Least Squares   F-statistic:                     3674.\n",
       "Date:                Sun, 15 Sep 2024   Prob (F-statistic):               0.00\n",
-      "Time:                        20:57:57   Log-Likelihood:                -2649.1\n",
+      "Time:                        21:04:42   Log-Likelihood:                -2649.1\n",
       "No. Observations:                 995   AIC:                             5312.\n",
       "Df Residuals:                     988   BIC:                             5346.\n",
       "Df Model:                           6                                         \n",
@@ -1080,7 +1080,7 @@
       "moon_phase_sin    0\n",
       "moon_phase_cos    0\n",
       "dtype: int64\n",
-      "sealevel-reg3.py:171: SettingWithCopyWarning: \n",
+      "models/sealevel-reg3.py:171: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -1091,9 +1091,9 @@
       "OLS Model - R²: 0.8945947719848347\n",
       "Figure(1000x600)\n",
       "Traceback (most recent call last):\n",
-      "  File \"sealevel-reg3.py\", line 215, in <module>\n",
+      "  File \"models/sealevel-reg3.py\", line 215, in <module>\n",
       "    create_and_evaluate_model(remove_columns=['month'])\n",
-      "  File \"sealevel-reg3.py\", line 202, in create_and_evaluate_model\n",
+      "  File \"models/sealevel-reg3.py\", line 202, in create_and_evaluate_model\n",
       "    future_predictions = ols_model.predict(X_encoded_future)\n",
       "  File \"/Users/alon.hod/opt/anaconda3/lib/python3.7/site-packages/statsmodels/base/model.py\", line 1160, in predict\n",
       "    **kwargs)\n",
@@ -1106,7 +1106,7 @@
    ],
    "source": [
     "# Run year 2100 sealevel predictions with machine learning model\n",
-    "!python sealevel-reg3.py"
+    "!python models/sealevel-reg3.py"
    ]
   },
   {
