--- a/Final_project-Sea_level.ipynb
+++ b/Final_project-Sea_level.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 1,
    "id": "3525cafc-5e0c-43b7-a6bf-90b7be51f296",
    "metadata": {},
    "outputs": [],
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 2,
    "id": "55ce7128-daef-4b68-8fd9-39921b6f7c5c",
    "metadata": {},
    "outputs": [],
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 3,
    "id": "ebf033aa-586d-4d05-a5e6-a0117a289504",
    "metadata": {},
    "outputs": [],
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 4,
    "id": "ac3f5170-6ce5-4df0-b336-b3d75687e5ab",
    "metadata": {},
    "outputs": [
@@ -170,7 +170,7 @@
        "4         1993      1     0.5000     0.8660       0.3400     14.5541  "
       ]
      },
-     "execution_count": 40,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -181,7 +181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "ebe57e71-9b1f-43e3-934c-3aa9b38eb0ba",
    "metadata": {},
    "outputs": [
@@ -191,7 +191,7 @@
        "(1495, 11)"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -202,7 +202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 6,
    "id": "a5213fb1-817d-45b4-8d38-abf749e2a3c1",
    "metadata": {},
    "outputs": [
@@ -222,7 +222,7 @@
        "Name: actual_year, dtype: int64"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -234,7 +234,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 7,
    "id": "07004277-8049-450b-b11d-b9114f8d12d8",
    "metadata": {},
    "outputs": [
@@ -290,17 +290,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 9,
    "id": "2bb97466-a43e-419b-9b13-d7f23c76360d",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<seaborn.axisgrid.PairGrid at 0x7f9e18cb7990>"
+       "<seaborn.axisgrid.PairGrid at 0x7ff381805610>"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -326,17 +326,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 10,
    "id": "d6bd74b5-00b2-4fed-aab0-a9543d66290e",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<seaborn.axisgrid.PairGrid at 0x7f9e18cad210>"
+       "<seaborn.axisgrid.PairGrid at 0x7ff3a4166b50>"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -372,7 +372,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 11,
    "id": "9d744bec-2210-4996-8119-f163fd6021a0",
    "metadata": {},
    "outputs": [],
@@ -418,7 +418,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 12,
    "id": "90ba8c15-7688-4cae-9a37-cf6e64c9fd51",
    "metadata": {},
    "outputs": [
@@ -499,7 +499,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 13,
    "id": "31337cec-27f0-494e-8d58-0240869313ad",
    "metadata": {},
    "outputs": [
@@ -535,7 +535,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 14,
    "id": "2cfeee87-730e-4c7d-a049-95644ed73db5",
    "metadata": {},
    "outputs": [],
@@ -547,7 +547,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 15,
    "id": "5f457eb0-0ac3-40fb-9166-5d3f5240fa2b",
    "metadata": {},
    "outputs": [
@@ -606,7 +606,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 16,
    "id": "97adc537-7013-4bb9-93e9-03a2014f0798",
    "metadata": {},
    "outputs": [
@@ -650,7 +650,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 17,
    "id": "5283db7d-498c-4832-bee2-c795ccad09a1",
    "metadata": {},
    "outputs": [],
@@ -660,7 +660,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 18,
    "id": "736a86d1-0322-4994-ab82-2c569686c7d5",
    "metadata": {},
    "outputs": [
@@ -686,7 +686,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 19,
    "id": "edde825f-3bb0-46f8-816f-40a12f80f5c3",
    "metadata": {},
    "outputs": [
@@ -713,7 +713,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 20,
    "id": "697be605-7200-428b-a265-33e42819d778",
    "metadata": {},
    "outputs": [
@@ -797,7 +797,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 21,
    "id": "4f5d7b06-ae10-4cb9-ac5d-8dc16aebfb20",
    "metadata": {},
    "outputs": [
@@ -869,8 +869,8 @@
       "Dep. Variable:               SeaLevel   R-squared:                       0.957\n",
       "Model:                            OLS   Adj. R-squared:                  0.957\n",
       "Method:                 Least Squares   F-statistic:                     3674.\n",
-      "Date:                Sun, 15 Sep 2024   Prob (F-statistic):               0.00\n",
-      "Time:                        21:04:49   Log-Likelihood:                -2649.1\n",
+      "Date:                Sat, 21 Sep 2024   Prob (F-statistic):               0.00\n",
+      "Time:                        14:58:16   Log-Likelihood:                -2649.1\n",
       "No. Observations:                 995   AIC:                             5312.\n",
       "Df Residuals:                     988   BIC:                             5346.\n",
       "Df Model:                           6                                         \n",
@@ -932,18 +932,7 @@
       "OLS Model - RMSE: 4.366707396698581\n",
       "OLS Model - MAE: 3.592755064062156\n",
       "OLS Model - R²: 0.8945947719848347\n",
-      "Figure(1000x600)\n",
-      "Traceback (most recent call last):\n",
-      "  File \"models/sealevel-reg3.py\", line 215, in <module>\n",
-      "    create_and_evaluate_model(remove_columns=['month'])\n",
-      "  File \"models/sealevel-reg3.py\", line 202, in create_and_evaluate_model\n",
-      "    future_predictions = ols_model.predict(X_encoded_future)\n",
-      "  File \"/Users/alon.hod/opt/anaconda3/lib/python3.7/site-packages/statsmodels/base/model.py\", line 1160, in predict\n",
-      "    **kwargs)\n",
-      "  File \"/Users/alon.hod/opt/anaconda3/lib/python3.7/site-packages/statsmodels/regression/linear_model.py\", line 381, in predict\n",
-      "    return np.dot(exog, params)\n",
-      "  File \"<__array_function__ internals>\", line 6, in dot\n",
-      "ValueError: shapes (24,6) and (7,) not aligned: 6 (dim 1) != 7 (dim 0)\n"
+      "Figure(1000x600)\n"
      ]
     }
    ],
@@ -954,7 +943,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 22,
    "id": "3062fa52-4691-4f04-a2d4-99e05dfd22b2",
    "metadata": {},
    "outputs": [
@@ -975,144 +964,50 @@
       "Temperature       0\n",
       "dtype: int64\n",
       "Training set month column value counts:\n",
-      " 12    87\n",
-      "3     86\n",
-      "8     86\n",
-      "7     83\n",
-      "9     83\n",
-      "10    83\n",
-      "1     82\n",
-      "2     82\n",
-      "5     82\n",
-      "6     81\n",
-      "4     80\n",
-      "11    80\n",
+      " 12    90\n",
+      "3     89\n",
+      "8     89\n",
+      "7     86\n",
+      "9     86\n",
+      "10    86\n",
+      "1     85\n",
+      "2     85\n",
+      "5     85\n",
+      "6     84\n",
+      "4     83\n",
+      "11    83\n",
       "Name: month, dtype: int64\n",
-      "models/sealevel-reg3.py:102: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame\n",
-      "\n",
-      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  future_df['Temperature'][0] = future_df['Temperature'][0] + 0.001\n",
-      "['average', 'Temperature', 'month_cos', 'month_sin', 'moon_phase_sin', 'moon_phase_cos']\n",
-      "/Users/alon.hod/opt/anaconda3/lib/python3.7/site-packages/pandas/core/frame.py:5244: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame\n",
-      "\n",
-      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  method=method,\n",
-      "/Users/alon.hod/opt/anaconda3/lib/python3.7/site-packages/pandas/util/_decorators.py:311: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame\n",
-      "\n",
-      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  return func(*args, **kwargs)\n",
-      "Missing values in X_train before encoding:\n",
-      " average           0\n",
-      "Temperature       0\n",
-      "month_cos         0\n",
-      "month_sin         0\n",
-      "moon_phase_sin    0\n",
-      "moon_phase_cos    0\n",
-      "dtype: int64\n",
-      "Missing values in X_encoded_train_df:\n",
-      " const             0\n",
-      "average           0\n",
-      "Temperature       0\n",
-      "month_cos         0\n",
-      "month_sin         0\n",
-      "moon_phase_sin    0\n",
-      "moon_phase_cos    0\n",
-      "dtype: int64\n",
-      "                            OLS Regression Results                            \n",
-      "==============================================================================\n",
-      "Dep. Variable:               SeaLevel   R-squared:                       0.957\n",
-      "Model:                            OLS   Adj. R-squared:                  0.957\n",
-      "Method:                 Least Squares   F-statistic:                     3674.\n",
-      "Date:                Sun, 15 Sep 2024   Prob (F-statistic):               0.00\n",
-      "Time:                        21:04:42   Log-Likelihood:                -2649.1\n",
-      "No. Observations:                 995   AIC:                             5312.\n",
-      "Df Residuals:                     988   BIC:                             5346.\n",
-      "Df Model:                           6                                         \n",
-      "Covariance Type:            nonrobust                                         \n",
-      "==================================================================================\n",
-      "                     coef    std err          t      P>|t|      [0.025      0.975]\n",
-      "----------------------------------------------------------------------------------\n",
-      "const           -565.9387     14.035    -40.324      0.000    -593.480    -538.398\n",
-      "average            1.5237      0.038     40.508      0.000       1.450       1.598\n",
-      "Temperature        7.3288      0.895      8.191      0.000       5.573       9.085\n",
-      "month_cos          4.6419      0.157     29.580      0.000       4.334       4.950\n",
-      "month_sin         -7.5872      0.170    -44.524      0.000      -7.922      -7.253\n",
-      "moon_phase_sin    -2.6117      0.393     -6.653      0.000      -3.382      -1.841\n",
-      "moon_phase_cos    -2.5298      0.449     -5.639      0.000      -3.410      -1.649\n",
-      "==============================================================================\n",
-      "Omnibus:                        4.520   Durbin-Watson:                   0.637\n",
-      "Prob(Omnibus):                  0.104   Jarque-Bera (JB):                4.450\n",
-      "Skew:                          -0.163   Prob(JB):                        0.108\n",
-      "Kurtosis:                       3.034   Cond. No.                     4.81e+04\n",
-      "==============================================================================\n",
-      "\n",
-      "Notes:\n",
-      "[1] Standard Errors assume that the covariance matrix of the errors is correctly specified.\n",
-      "[2] The condition number is large, 4.81e+04. This might indicate that there are\n",
-      "strong multicollinearity or other numerical problems.\n",
-      "/Users/alon.hod/opt/anaconda3/lib/python3.7/site-packages/pandas/core/frame.py:5244: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame\n",
-      "\n",
-      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  method=method,\n",
-      "/Users/alon.hod/opt/anaconda3/lib/python3.7/site-packages/pandas/util/_decorators.py:311: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame\n",
-      "\n",
-      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  return func(*args, **kwargs)\n",
-      "Missing values in X_test before encoding:\n",
-      " average           0\n",
-      "Temperature       0\n",
-      "month_cos         0\n",
-      "month_sin         0\n",
-      "moon_phase_sin    0\n",
-      "moon_phase_cos    0\n",
-      "dtype: int64\n",
-      "Missing values in X_encoded_test_df:\n",
-      " const             0\n",
-      "average           0\n",
-      "Temperature       0\n",
-      "month_cos         0\n",
-      "month_sin         0\n",
-      "moon_phase_sin    0\n",
-      "moon_phase_cos    0\n",
-      "dtype: int64\n",
-      "models/sealevel-reg3.py:171: SettingWithCopyWarning: \n",
+      "14:58:19 - cmdstanpy - INFO - Chain [1] start processing\n",
+      "14:58:19 - cmdstanpy - INFO - Chain [1] done processing\n",
+      "Figure(1000x600)\n",
+      "Predicted Sea Levels at CO2 = 400 ppm for each month in 2100: [ 856.30040249 -573.42017382  854.10655601 -575.61402029  853.48702712\n",
+      " -576.23354919  854.43710493 -575.28347138  853.39063457 -576.32994174\n",
+      " -576.90407844  852.81649786]\n",
+      "Predicted Sea Levels at CO2 = 1200 ppm for each month in 2100: [-579.26688072  850.45369559 -575.00825196  854.71232434 -570.02136937\n",
+      "  859.69920694 -563.66951848  866.05105783 -563.80773919  865.91283712\n",
+      "  867.32323764 -562.39733867]\n",
+      "models/sealevel-timeseries.py:132: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  test_df['SeaLevel_Predicted_OLS'] = ols_model.predict(X_encoded_test_df)\n",
-      "OLS Model - RMSE: 4.366707396698581\n",
-      "OLS Model - MAE: 3.592755064062156\n",
-      "OLS Model - R²: 0.8945947719848347\n",
-      "Figure(1000x600)\n",
-      "Traceback (most recent call last):\n",
-      "  File \"models/sealevel-reg3.py\", line 215, in <module>\n",
-      "    create_and_evaluate_model(remove_columns=['month'])\n",
-      "  File \"models/sealevel-reg3.py\", line 202, in create_and_evaluate_model\n",
-      "    future_predictions = ols_model.predict(X_encoded_future)\n",
-      "  File \"/Users/alon.hod/opt/anaconda3/lib/python3.7/site-packages/statsmodels/base/model.py\", line 1160, in predict\n",
-      "    **kwargs)\n",
-      "  File \"/Users/alon.hod/opt/anaconda3/lib/python3.7/site-packages/statsmodels/regression/linear_model.py\", line 381, in predict\n",
-      "    return np.dot(exog, params)\n",
-      "  File \"<__array_function__ internals>\", line 6, in dot\n",
-      "ValueError: shapes (24,6) and (7,) not aligned: 6 (dim 1) != 7 (dim 0)\n"
+      "  test_df['ds'] = pd.to_datetime(test_df['actual_year'].astype(str) + '-' + test_df['month'].astype(str).str.zfill(2), format='%Y-%m')\n",
+      "RMSE: 3.712324337581147\n",
+      "MAE: 2.9707834824956714\n",
+      "R²: 0.90813674006139\n",
+      "Figure(1000x600)\n"
      ]
     }
    ],
    "source": [
     "# Run year 2100 sealevel predictions with machine learning model\n",
-    "!python models/sealevel-reg3.py"
+    "!python models/sealevel-timeseries.py"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "503bb731-5bd7-40b4-9fea-af11f5a6f498",
+   "id": "c18e6683-940b-458f-a01d-bd4a055fab89",
    "metadata": {},
    "outputs": [],
    "source": []
